--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -8,7 +8,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="268dp"
-        android:layout_height="317dp"
+        android:layout_height="wrap_content"
         app:cardElevation="10dp"
         app:cardCornerRadius="10dp">
 
@@ -52,16 +52,6 @@
                         android:layout_weight="90"
                         android:textColor="@color/black"/>
 
-                    <TextView
-                        android:id="@+id/movie_duraton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_weight="10"
-                        android:text="Duration"
-                        android:textSize="14sp"
-                        android:textColor="@color/black"/>
-
                 </LinearLayout>
             </LinearLayout>
 
@@ -72,6 +62,7 @@
                 android:layout_margin="10dp"
                 android:layout_gravity="center"
                 android:id="@+id/rating_bar"
+                style="@style/RatingBar"
                 android:stepSize="0.1" />
         </LinearLayout>
 
