--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -14,15 +14,15 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:alpha="0.7"
+        android:contentDescription="@string/movie_backdrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/inuyasha_movie_3_backdrop"
-        android:contentDescription="@string/movie_backdrop" />
+        app:srcCompat="@drawable/inuyasha_movie_3_backdrop" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="556dp"
+        android:layout_height="566dp"
         android:background="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,16 +38,15 @@
 
             <TextView
                 android:id="@+id/movie_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginEnd="140dp"
+                android:layout_width="228dp"
+                android:layout_height="31dp"
+                android:layout_marginStart="168dp"
+                android:layout_marginTop="8dp"
                 android:gravity="left"
                 android:text="@string/movie_title"
                 android:textColor="@color/white"
                 android:textSize="22sp"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -67,12 +66,11 @@
                 android:id="@+id/movie_genre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginStart="168dp"
+                android:layout_marginTop="8dp"
                 android:gravity="left"
                 android:text="@string/genre1_genre2_genre3"
                 android:textColor="@color/white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.652"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/movie_release_date" />
 
@@ -91,8 +89,8 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/movie_content"
-                android:layout_width="380dp"
-                android:layout_height="376dp"
+                android:layout_width="377dp"
+                android:layout_height="470dp"
                 android:layout_marginLeft="11dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="11dp"
@@ -103,39 +101,43 @@
                 app:layout_constraintTop_toBottomOf="@+id/rating_bar"
                 app:layout_constraintVertical_bias="0.067">
 
-<!--                <com.ms.square.android.expandabletextview.ExpandableTextView-->
-<!--                    android:id="@+id/movie_overview"-->
-<!--                    android:layout_width="221dp"-->
-<!--                    android:layout_height="216dp"-->
-<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                    app:layout_constraintEnd_toEndOf="parent">-->
+                <com.ms.square.android.expandabletextview.ExpandableTextView
+                    android:id="@+id/movie_overview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:maxCollapsedLines="4">
 
-<!--                    <TextView-->
-<!--                        android:id="@+id/expandable_text"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:fontFamily="sans-serif-light"-->
-<!--                        android:text="HELLO"-->
-<!--                        android:textColor="@color/white"-->
-<!--                        android:textSize="16sp" />-->
+                    <TextView
+                        android:id="@+id/expandable_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="0dp"
+                        android:layout_marginTop="35dp"
+                        android:fontFamily="sans-serif-light"
+                        android:textColor="@color/white"
+                        android:textSize="18sp" />
 
-<!--                    <ImageButton-->
-<!--                        android:id="@+id/expand_collapse"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_gravity="right|bottom"-->
-<!--                        android:background="@android:color/transparent"-->
-<!--                        android:padding="16dp" />-->
-<!--                </com.ms.square.android.expandabletextview.ExpandableTextView>-->
+                    <ImageButton
+                        android:id="@+id/expand_collapse"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right|bottom"
+                        android:layout_marginRight="10dp"
+                        android:background="@android:color/transparent"
+                        android:padding="8dp" />
+                </com.ms.square.android.expandabletextview.ExpandableTextView>
 
                 <Button
-                    android:id="@+id/add_to_list"
+                    android:id="@+id/heart_button"
+                    style="@style/heartButton"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
-                    android:layout_marginBottom="16dp"
+                    android:layout_marginBottom="140dp"
+                    android:background="@drawable/icon_heart_white"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:background="@drawable/icon_heart_white"/>
+                    app:layout_constraintEnd_toEndOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -161,7 +163,6 @@
         app:layout_constraintVertical_bias="0.24"
         app:shapeAppearanceOverlay="@style/roundImageView"
         app:srcCompat="@drawable/inuyasha_movie_3" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
