--- a/app/src/main/res/layout/fragment_setting_tab.xml
+++ b/app/src/main/res/layout/fragment_setting_tab.xml
@@ -3,12 +3,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.SettingTabFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="15dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/language"
+                android:layout_weight="50"
+                android:textColor="@color/black"
+                android:layout_marginLeft="15dp"
+                android:gravity="left|center_vertical"/>
+
+
+            <RelativeLayout
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="55dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="3dp"
+                    android:layout_toStartOf="@+id/drop_down"
+                    android:text="English"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/black" />
+
+                <ImageView
+                    android:id="@+id/drop_down"
+                    android:layout_width="22dp"
+                    android:layout_height="19dp"
+                    android:foregroundGravity="center_vertical"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="8dp"
+                    android:src="@drawable/ic_drop_down_foreground" />
+            </RelativeLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
 
 </FrameLayout>
