--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/homeBtn"
+        android:id="@+id/homeTabFragment"
         android:enabled="true"
-        android:icon="@drawable/icon_home"
-        android:title="@string/home"/>
+        android:icon="@drawable/ic_baseline_home_24"
+        android:title="@string/home" />
     <item
-        android:id="@+id/favorite"
+        android:id="@+id/favoriteTabFragment"
         android:enabled="true"
-        android:icon="@drawable/icon_heart_nav"
-        android:title="@string/favorite"/>
+        android:icon="@drawable/ic_baseline_favorite_24"
+        android:title="@string/favorite" />
     <item
-        android:id="@+id/setting"
+        android:id="@+id/settingTabFragment"
         android:enabled="true"
-        android:icon="@drawable/icon_gear"
-        android:title="@string/setting"/>
+        android:icon="@drawable/ic_baseline_settings_24"
+        android:title="@string/setting" />
 </menu>
