--- a/app/src/main/res/layout/fragment_setting_tab.xml
+++ b/app/src/main/res/layout/fragment_setting_tab.xml
@@ -30,6 +30,11 @@
                 android:layout_height="40dp"
                 android:orientation="horizontal">
 
+                <Spinner
+                    android:id="@+id/language_spinner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
                 <TextView
                     android:layout_width="55dp"
                     android:layout_height="match_parent"
