--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -64,7 +64,7 @@
 
             <TextView
                 android:id="@+id/movie_genre"
-                android:layout_width="wrap_content"
+                android:layout_width="222dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="168dp"
                 android:layout_marginTop="8dp"
@@ -137,7 +137,9 @@
                     android:layout_marginBottom="140dp"
                     android:background="@drawable/icon_heart_white"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/movie_overview"
+                    app:layout_constraintVertical_bias="1.0" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
