--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -81,6 +81,7 @@
                 android:layout_height="48dp"
                 android:layout_marginTop="100dp"
                 android:rating="5"
+                android:isIndicator="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.928"
                 app:layout_constraintStart_toStartOf="parent"
@@ -162,7 +163,7 @@
         app:layout_constraintHorizontal_bias="0.025"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.24"
+        app:layout_constraintVertical_bias="0.20"
         app:shapeAppearanceOverlay="@style/roundImageView"
         app:srcCompat="@drawable/inuyasha_movie_3" />
 
