--- a/app/src/main/res/layout/favorite_list_item.xml
+++ b/app/src/main/res/layout/favorite_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="180dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
@@ -10,7 +10,7 @@
         android:layout_height="165dp"
         android:orientation="horizontal"
         app:cardCornerRadius="10dp"
-        app:cardElevation="10dp"
+        app:cardElevation="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -25,8 +25,7 @@
                 android:layout_width="112dp"
                 android:layout_height="143dp"
                 android:layout_marginLeft="15dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/inuyasha_movie_3" />
+                android:layout_marginTop="10dp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
