--- a/app/src/main/res/layout/favorite_list_item_dialog.xml
+++ b/app/src/main/res/layout/favorite_list_item_dialog.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="50dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="15dp">
         <TextView
             android:id="@+id/fav_name"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:gravity="center_vertical"
             android:textColor="@color/black"
-            android:text="@string/favorite" />
+            android:text="@string/favorite"
+            android:paddingLeft="15dp" />
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
